--- a/style.scss
+++ b/style.scss
@@ -32,3 +32,76 @@ body{
         cursor: pointer;
     }    
 }
+
+.header{
+    padding-top: 31px;
+    padding-bottom: 56px;
+    
+
+    .nav-wrap{
+        align-items: center;
+        display: flex;
+        justify-content: space-between;
+        
+    }
+
+    .nav {
+        
+        padding-top: 25px;
+        text-align: center;
+        &__item{
+            color: var(--c-yesil);
+            font-family:var(--f-span) ;
+            font-style: normal;
+            font-weight:400 ;
+            font-size: 18px;
+            line-height: 22px;
+            margin-right: 40px;
+            text-decoration: none;
+        
+        }
+            &__item--active{
+                color: var(--c-genel);
+                pointer-events: none;
+                position: relative;
+                &::after{
+                    content:"";
+                    background:var(--c-nokta);
+                    border-radius: 100px;
+                    bottom: 0;
+                    position: absolute;
+                    width: 6px;
+                    height: 6px;
+                    left: 50%;
+                    transform: translateX(-50%);
+                    top: 25px;
+                    
+                }
+            }
+        &__img{
+            display: inline-block;
+            margin-left: 0;
+        } 
+        
+    }
+    .button{
+        height: 45px;
+        margin-left: 0;
+        &:hover{
+            background-color: var(--c-nokta);
+            color: white;
+            border: 2px solid var(--c-yesil);
+        }
+        &--c{
+            color:var(--c-genel);
+        }
+        &--bg{
+            background-color: #ffffff;
+        }
+        &--font-size{
+            font-size: 18px;
+        }
+            line-height: 22px;
+    }
+
+}
